--- a/app/design/frontend/default/apple/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/apple/template/catalog/product/list.phtml
@@ -20,18 +20,20 @@
         <li class="item<?php if( ++$_iterator == sizeof($_productCollection) ): ?> last<?php endif; ?>">
             <?php // Product description ?>
             <div class="product-shop">
-                <div class="f-fix">
-                    <?php $_productNameStripped = $this->stripTags($_product->getName(), null, true); ?>
-                    <h2 class="product-name"><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $_productNameStripped; ?>"><?php echo $_helper->productAttribute($_product, $_product->getName() , 'name'); ?></a></h2>
-                    <?php if($_product->getRatingSummary()): ?>
-                    <?php echo $this->getReviewsSummaryHtml($_product) ?>
-                    <?php endif; ?>
-                    <div class="desc std">
-                        <?php echo $_helper->productAttribute($_product, $_product->getShortDescription(), 'short_description') ?>
-                        <a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $_productNameStripped ?>" class="link-learn"><?php echo $this->__('Learn More') ?></a>
+            	<a href="<?php echo $_product->getProductUrl() ?>">
+                    <div class="f-fix">
+                        <?php $_productNameStripped = $this->stripTags($_product->getName(), null, true); ?>
+                        <div class="product-name"><?php echo $_helper->productAttribute($_product, $_product->getName() , 'name'); ?></div>
+                        <?php if($_product->getRatingSummary()): ?>
+                            <?php echo $this->getReviewsSummaryHtml($_product) ?>
+                        <?php endif; ?>
+                        <div class="created-at">
+                            <?php echo $_product->getCreatedAt() ?>
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
+            <div class="clearer"></div>
         </li>
     <?php endforeach; ?>
     </ol>
