--- a/skin/frontend/default/apple/css/styles.css
+++ b/skin/frontend/default/apple/css/styles.css
@@ -1,28 +1,3 @@
-/**
- * Magento
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Academic Free License (AFL 3.0)
- * that is bundled with this package in the file LICENSE_AFL.txt.
- * It is also available through the world-wide-web at this URL:
- * http://opensource.org/licenses/afl-3.0.php
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@magentocommerce.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade Magento to newer
- * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magentocommerce.com for more information.
- *
- * @category    design
- * @package     default_blank
- * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
- */
-
 /* Reset ================================================================================= */
 * { margin:0; padding:0; }
 
@@ -94,12 +69,12 @@ ul,ol         { list-style:none; }
 .page-print { background:#fff; padding:20px; text-align:left; }
 .page-empty { background:#fff; padding:20px; text-align:left; }
 .page-popup { padding:20px; text-align:left; }
-.main-container { background-color:#d5dde6; width:888px; }
+.main-container { background-color:#d5dde6; width:877px; margin-left:12px; }
 .main {}
 
 /* Base Columns */
-.col-left { float:left; width:156px; border:1px solid #8b8b8b; padding:5px 0; margin-left:12px; background-color:#D5DDE6; }
-.col-main { float:left; width:716px; border:1px solid #8b8b8b; background-color:#fff; }
+.col-left { float:left; width:156px; border:1px solid #8b8b8b; padding:5px 0; background-color:#D5DDE6; }
+.col-main { float:left; width:719px; background-color:#fff; }
 .col-right { float:right; width:230px; border:1px solid #8b8b8b; padding:5px 5px 0; }
 
 /* 1 Column Layout */
@@ -321,6 +296,11 @@ p.required { font-size:10px; text-align:right; color:#f00; }
 .sorter .view-mode { float:left; }
 .sorter .sort-by { float:right; }
 .sorter .link-feed {}
+.sorter-article {  }
+.sorter-article a { float:left; width:530px; height:15px; background:url(../images/sorterover.png); color:#000; text-decoration:none; }
+.sorter-article a:hover { background:url(../images/sorterover.png); }
+.sorter-date a { float:left; width:189px; background:url(../images/sorterover.png); color:#000; text-decoration:none; }
+.sorter-date a:hover { float:left; width:189px; background:url(../images/sorterover.png); }
 
 /* Toolbar */
 .toolbar {}
@@ -642,7 +622,7 @@ tr.summary-details-excluded { font-style:italic; }
 
 /* Product View ========================================================================== */
 /* Rating */
-.no-rating { margin:0; }
+.no-rating a { margin:0; color:#000; }
 
 .ratings { font-size:11px; line-height:1.25; margin:7px 0; }
 .ratings strong { float:left; margin:1px 3px 0 0; }
@@ -676,7 +656,7 @@ tr.summary-details-excluded { font-style:italic; }
 .availability-only-details tr.odd td.last {}
 
 /* Email to a Friend */
-.email-friend {}
+.email-friend a { color:#000; }
 
 /* Alerts */
 .alert-price {}
@@ -810,7 +790,9 @@ tr.summary-details-excluded { font-style:italic; }
 .product-image-popup .image-label {}
 
 /* Product Shop */
-.product-view .product-shop { float:right; width:445px; }
+.product-view .product-shop {}
+.product-view .product-name { float:left; }
+.product-view .product-ratings { float:right; padding-right:10px; }
 .col1-layout .product-view .product-shop { float:right; width:700px; }
 .col3-layout .product-view .product-shop { float:none; width:auto; }
 .product-view .product-name {}
@@ -1151,12 +1133,16 @@ tr.summary-details-excluded { font-style:italic; }
 
 
 /* Footer ================================================================================ */
-.footer { border:1px solid #ddd; padding:10px; }
+.footer {}
 .footer p { text-align:right; }
 .footer address { text-align:right; }
 .footer ul {}
 .footer ul li { display:inline; }
-.footer-container { background-image: url("../images/bg-footer.gif"); background-repeat: no-repeat; }
+.footer-container { background-image: url("../images/bg-footer.gif"); background-repeat: no-repeat; width:877px; margin-left:12px; height:25px; }
+.footer-links { float:left; }
+.footer-links a { text-decoration:none; color:#000; }
+.footer-links a:hover { text-decoration:underline; }
+.footer-version { float:right; }
 .footer-container .bottom-container { text-align:center; }
 /* ======================================================================================= */
 
